tests/bad/polymorphic_recursion.ppl
define f = \x. amb () (f (x, x));
f True
